@@ -35,6 +35,7 @@ polcoeff(s,1,y)
 s=y+O(y^2);
 polcoeff(s,0,x)
 polcoeff(s,1,x)
+s=1/(1-2*x+O(x^3)) * 1/(1-3*y+O(y^3)); polcoeff(s,2,y)
 
 vecextract(Vecsmall([3,4,5]),[2,3,1])
 vecextract([1], 11)
